# core

./: .dockerignore  .gitignore  Cargo.toml  cog.toml  kit.example.json  services.example.json
crates/init/: Cargo.toml
crates/init/src/: internet.rs
crates/kit/: Cargo.toml
crates/kit/src/: build_bootloader.nu  docker_extract.rs  lib.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docker/: Dockerfile.init  Dockerfile.kernel  Dockerfile.nushell
src/: config.rs  docker_extract.rs  lib.rs  protocol.rs
src/scripts/: build_bootloader.nu  run_qemu.nu
