[package]
name = "theos-kit"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "tkit"
path = "src/bin/builder.rs"

[[bin]]
name = "tinit"
path = "src/bin/init_system.rs"

[dependencies]
crossterm = { version = "0.24.0", features = ["serde"] }
serde = { version = "1.0.140", features = ["derive"] }
tui = { version = "0.18.0", default-features = false, features = ["crossterm", "serde"] }
tui-textarea = "0.1.5"
anyhow = "1.0.58"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
hyper = { version = "0.14.20", features = ["server"] }
bollard = "0.13.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
async-recursion = "1.0.0"
serde_json = "1.0.82"
tar = "0.4.38"
daemonize-me = "2.0.1"
derive_builder = "0.11.2"
tempdir = "0.3.7"
zbox = { version = "0.9.2", features = ["storage-file", "libsodium-bundled"] }
routerify = "3.0.0"
async-trait = "0.1.56"
